--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>MyPasteBin</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nav-css.css') }}" />
+    <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.js') }}"></script>
 </head>
 <body>
@@ -28,12 +29,11 @@
 
 <div class="page-content">
 
-
-
     {% block content %}
 
     {% endblock %}
 </div>
-
+{% block js_block %}
+{% endblock %}
 </body>
 </html>
