--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,52 @@
 {% extends 'base.html' %}
 {% block content %}
-    signup
+<div class="container-fluid">
+    <div class="row row-no-gutters">
+        <div class="col-xs-12 col-md-8">
+            <div class="form-title">
+                Login Page
+            </div>
+            <hr class="new-hr">
+            <div class="row row-no-gutters">
+                <form class="form-horizontal">
+                    <div style="padding: 15px">
+                        <div class="form-group">
+                            <label for="username" class="col-sm-2 control-label">用户名：</label>
+                            <div class="col-sm-6">
+                                <input type="text" class="form-control" name="username" id="username"
+                                       placeholder="请输入用户名">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="col-sm-2 control-label">邮箱：</label>
+                            <div class="col-sm-6">
+                                <input type="email" class="form-control" name="email" id="email"
+                                       placeholder="请输入邮箱">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="col-sm-2 control-label">密 码：</label>
+                            <div class="col-sm-6">
+                                <input type="password" class="form-control" name="password" id="password"
+                                       placeholder="请输入密码">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password_confirm" class="col-sm-2 control-label">确认密码：</label>
+                            <div class="col-sm-6">
+                                <input type="password" class="form-control" name="password_confirm" id="password_confirm"
+                                       placeholder="请再次确认密码">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-primary">注册</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
