--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,13 @@
 <div class="container-fluid">
     <div class="row row-no-gutters">
         <div class="col-xs-12 col-md-8">
+            {% if error %}
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <strong>Error!</strong>
+                提交失败，请确保信息完整！
+            </div>
+            {% endif %}
             <form method="post">
                 <div class="form-group">
                     <div class="form-title">
